WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212007
Find doesn't always scroll search results into view
https://bugs.webkit.org/show_bug.cgi?id=212007
Summary
Find doesn't always scroll search results into view
Simon Fraser (smfr)
Reported
2020-05-17 20:59:27 PDT
Find doesn't always scroll search results into view
Attachments
Patch
(8.74 KB, patch)
2020-05-17 21:02 PDT
,
Simon Fraser (smfr)
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-17 21:02:56 PDT
Created
attachment 399618
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-05-17 21:02:59 PDT
<
rdar://problem/36333321
>
Simon Fraser (smfr)
Comment 3
2020-05-18 10:48:22 PDT
https://trac.webkit.org/changeset/261819/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug