Find doesn't always scroll search results into view https://bugs.webkit.org/show_bug.cgi?id=212007 <rdar://problem/36333321>

Reviewed by Wenson Hsieh.

Source/WebCore:

HighlightData::collectBounds() could produce overly large bounds, causing the selection
to fail to scroll into view.

This happened when multiple block ancestors were added to 'renderers', with empty
rects. The process of mapping that empty rect to a quad via localToAbsoluteQuad()
could produce an empty quad at a fractional offset, then calling enclosingBoundingBox()
on the quad would create a 1x1 rectangle, which got unioned with selectionRect.

Fix by skipping entries with empty rects.

Add a Selection log channel and some logging that makes this trivial to see.

Test: editing/selection/selection-bounds-fractional-containing-blocks.html

* platform/Logging.h:
* rendering/HighlightData.cpp:
(WebCore::HighlightData::collectBounds const):

LayoutTests:

* editing/selection/selection-bounds-fractional-containing-blocks-expected.txt: Added.
* editing/selection/selection-bounds-fractional-containing-blocks.html: Added.

Canonical link: https://commits.webkit.org/224910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261819 268f45cc-cd09-0410-ab3c-d52691b4dbfc